--- a/tailwind_web/package.json
+++ b/tailwind_web/package.json
@@ -37,6 +37,8 @@
     ]
   },
   "devDependencies": {
+    "react-icons": "^4.7.1",
+    "react-typed": "^1.2.0",
     "tailwindcss": "^3.2.4"
   }
 }
