--- a/19-stock-photos/setup/.gitignore
+++ b/19-stock-photos/setup/.gitignore
@@ -12,13 +12,13 @@
 /build
 
 # misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# .DS_Store
+# .env.local
+# .env.development.local
+# .env.test.local
+# .env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.env
+# npm-debug.log*
+# yarn-debug.log*
+# yarn-error.log*
+# .env
